Reduce privileges for vmdir and vmca
This change makes vmdir and vmca run as a non-root "lightwave"
user and group.  To allow certain privileged operations, the
following Linux capabilities are set on the executables:

vmcad:
    CAP_DAC_READ_SEARCH

vmdird:
    CAP_DAC_READ_SEARCH
    CAP_SYS_NICE
    CAP_SYS_RESOURCE
    CAP_NET_BIND_SERVICE

Vmdir now allows users in lightwave group to perform IPC operations.

The ACL on the Vmdir registry key allows read access for lightwave group.

The endpoints for DCERPC ncalrpc services have been modified to use the
path prefix "/var/lib/vmware/rpc" to avoid creating them in the default
likewise directory "/var/lib/likewise/rpc".

Testing:

    Fresh Install:
      1) Deployed Full-E2E-Deploy-Environment in AWS with this change
      2) Scaled up Lightwave to 2 nodes
      3) Ran Lightwave-Proxy Test Suite: success

    Upgrade:
      1) Deployed Full-E2E-Deploy-Environment in AWS
      2) Scaled up Lightwave to 2 nodes
      3) Upgraded Lightwave RPMs with this change on Lightwave and POST nodes
      4) Ran Lightwave-Proxy Test Suite: success

Change-Id: Ife7c2c1bb896f48c6216ce1b1e5b96f4a53585e5

--- a/vmafd/config/vmafd.reg.in
+++ b/vmafd/config/vmafd.reg.in
@@ -1,6 +1,7 @@
 [HKEY_THIS_MACHINE\Services]
 
 [HKEY_THIS_MACHINE\Services\vmafd]
+@security = O:SYG:BAD:(A;;KA;;;BA)(A;;KA;;;S-1-22-1-@LIGHTWAVE_UID@)(A;;KR;;;WD)
 "Description" = {
     default = "VMware afd Service"
     doc = ""
@@ -31,6 +32,7 @@
 }
 
 [HKEY_THIS_MACHINE\Services\vmafd\Parameters]
+@security = O:SYG:BAD:(A;;KA;;;BA)(A;;KA;;;S-1-22-1-@LIGHTWAVE_UID@)(A;;KR;;;WD)
 "LogFile" = {
     default = "/var/log/vmware/vmafd/vmafdd.log"
     doc     = "Log File"
