--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -36,6 +36,7 @@
         <module>sts</module>
         <module>openidconnect</module>
         <module>websso</module>
+        <module>lightwaveui</module>
         <module>sso-config</module>
         <module>service</module>
       </modules>
