[WIP] sts: run as non-root user
Bug Number: 2121168

testing done:
 - deployed standalone lw
   - verify service is started as lightwave user
   - verify basic get token/create tenant operations are working
 - vmidentity integration & unit tests passed
 - deploy standalone lw using previous build
   - run rpm upgrade to latest build
   - verify upgrade successfull
   - verify sts process running as lightwave
   - verify file ownership is set as expected
   - verify basic get token/create tenant operations are working
 - deployed in aws with Lightwave-CodeDeploy-Deploy-New successfully
 - deployed with private cascade e-e Full-E2E-Deploy-Environment-PrivateLW successfully

Change-Id: I09cbf613e3cbb29810dd80efca5439fe6dc99b55

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -73,7 +73,7 @@ vmidmconf_DATA= \
     @top_srcdir@/vmidentity/sso-config/src/main/resources/ssoconfig.log4j2.xml \
     @top_srcdir@/vmidentity/idm/server/src/main/resources/log4j2.xml \
     @top_srcdir@/vmidentity/idm/server/src/main/resources/server.policy \
-    @top_srcdir@/vmidentity/idm/server/src/main/resources/idm.reg
+    @top_builddir@/vmidentity/config/idm.reg
 
 vmstsbin_DATA = \
     @top_builddir@/vmidentity/config/setenv.sh \
