--- a/lwraft/testing/docker_deployments/Dockerfile
+++ b/lwraft/testing/docker_deployments/Dockerfile
@@ -8,7 +8,7 @@ RUN tdnf install -y lightwave-post
 #manually run "make postrpm" from lwraft build folder 
 #and copy the lightwave-post*.rpm to this
 #directory to work with local built artifacts.
-COPY lightwave-post*.rpm /
+COPY lightwave-*.rpm /
 RUN rpm -Uvh --nodeps --force /lightwave*.rpm
 
 RUN curl -L https://vmware.bintray.com/photon_publish_rpms/x86_64/lmdb-0.9.21-1.ph2.x86_64.rpm -o lmdb.rpm
@@ -21,11 +21,7 @@ ARG POST_PWD_IN
 ENV POST_PWD=$POST_PWD_IN
 
 #copy setup and inspect scripts
-COPY scripts/post_setup.sh /
-COPY scripts/post_stat.sh /
-COPY scripts/post_log_stat.sh /
+COPY scripts/post_*.sh /
 
-RUN chmod +x /post_setup.sh
-RUN chmod +x /post_stat.sh
-RUN chmod +x /post_log_stat.sh
+RUN chmod +x /post_*.sh
 CMD ["/bin/bash"]
