--- a/vmidentity/service/src/main/webapp/WEB-INF/web.xml
+++ b/vmidentity/service/src/main/webapp/WEB-INF/web.xml
@@ -75,9 +75,17 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+    <!-- Disable default welcome page. -->
+    <!--
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    -->
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/NotFound.jsp</location>
+    </error-page>
 
     <!-- rest -->
     <listener>
