Update the location of external jars to common location
Multiple java versions would be able to access the extensions jars from
this common location

Verified with the built RPMS: Deployed, updated openjre8 to 162 and then
stopped and started stsd. The service is starting. 

Change-Id: I217c87eb7fee3a975717d725b0118910e2cd2226

--- a/configure.ac
+++ b/configure.ac
@@ -1275,7 +1275,7 @@ AC_SUBST(javaetcdir)
 vmafdjarsdir="$prefix/jars"
 AC_SUBST(vmafdjarsdir)
 
-jreextdir=$JRE_EXT
+jreextdir="/usr/java/packages/lib/ext"
 AC_SUBST(jreextdir)
 
 #--------------------------------------------------------------------
