Added mdb compaction to LW
Ported mdb_compact.sh from post and added mdb_verify_checksum to the lw server rpm

Change-Id: I8750c4e0f91db92534001fa1b44555941a33874c

--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -7,7 +7,8 @@ bin_SCRIPTS = \
     @top_srcdir@/config/scripts/lw_backup.sh \
     @top_srcdir@/config/scripts/aws_backup_common.sh \
     @top_srcdir@/config/scripts/lw_restore.sh \
-    @top_srcdir@/config/scripts/aws_restore_common.sh
+    @top_srcdir@/config/scripts/aws_restore_common.sh \
+    @top_srcdir@/config/scripts/mdb_compact.sh
 
 scriptsconf_SCRIPTS = \
  setfirewallrules.py \
