Send Heartbeat from DNS to AFD
Jira ID: CNA-1212

- Currently DNS does not send its heartbeat to AFD, so even when
  DNS is down, we can get heartbeat status as active
- As a part of new DNS solution, we want to update resolv.conf in
  clients and servers when a DNS server goes down or back up
- This requires DNS heartbeat to be sent to AFD, so that clients
  can know when DNS is up or down, and update resolv.conf

Testing:
- Stopped vmdns and checked heartbeat status
- Status changed to 0 after 30 seconds (Heartbeat interval is 10
  seconds, and AFD changes status to 0 if it does not receive 3
  consecutive heartbeats, causing 30 seconds delay)
- Started vmdns and checked heartbeat status
- Status changed to 1 immediately
- Stopped vmdns, restarted vmafd and checked heartbeat status
- Status started with 1 and changed to 0 after 30 seconds

Change-Id: Id56a9a10c5d44c40ac34b5ca896c85df11e70499

--- a/configure.ac
+++ b/configure.ac
@@ -1085,6 +1085,11 @@ AC_DEFINE_UNQUOTED(VMDIR_LIB_DIR, "$VMDIR_LIB_DIR", [Lib directory])
 vmdirsasldir=$vmdirlibdir/sasl2
 AC_SUBST(vmdirsasldir)
 
+vmdnslibdir=$prefix/lib64
+AC_SUBST(vmdnslibdir)
+AS_AC_EXPAND(VMDNS_LIB_DIR, $vmdnslibdir)
+AC_DEFINE_UNQUOTED(VMDNS_LIB_DIR, "$VMDNS_LIB_DIR", [Lib directory])
+
 vmcalibdir=$prefix/lib64
 AC_SUBST(vmcalibdir)
 AS_AC_EXPAND(VMCA_LIB_DIR, $vmcalibdir)
