Fix websso unit tests.
Mock idmClient instead of calling actual idm service.

Ran ./support/scripts/test-vmidentity.sh

Change-Id: Iae0b975fa1199876173a258f6624fe1ede1c9cc3

--- a/vmidentity/websso/src/test/resources/testconfig.properties
+++ b/vmidentity/websso/src/test/resources/testconfig.properties
@@ -48,9 +48,9 @@ Demo.credentials.key-store-alias=stskey
 Demo.credentials.key-store-password=ca$hc0w
 
 Demo.assertion-consumer-service-0=ACS0
-#Demo.assertion-consumer-service-1=ACS1
-#Demo.assertion-consumer-service-2=ACS2
-#Demo.assertion-consumer-service-default=ACS0
+Demo.assertion-consumer-service-1=ACS1
+Demo.assertion-consumer-service-2=ACS2
+Demo.assertion-consumer-service-default=ACS0
 
 Demo.single-logout-service-0=SLO0
 Demo.single-logout-service-1=SLO1
