--- a/vmidentity/openidconnect/server/pom.xml
+++ b/vmidentity/openidconnect/server/pom.xml
@@ -124,6 +124,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>${easymock.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Transitive Dependencies -->
     <dependency>
       <groupId>commons-lang</groupId>
