PR 2135300: separate registry function into regutil.c
code reorg - move registry function from util.c into regutil.c
no semantic changes.

Change-Id: I2149c02aa41c8befcb2cbdb023d728486d5843b4

--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -26,6 +26,7 @@ libcommon_la_SOURCES = \
     opensslclient.c  \
     opensslutil.c \
     parsearguments.c \
+    regutil.c  \
     rpcmemory.c  \
     securityutil.c \
     securityutiluniximpl.c \
