Cleanup prior RPMs
Change-Id: I712c52c03cf37abc78159e1edbd180a71f532ac4

Cleanup RPM install scripts

Restore container images back to working state.

Update Version to 1.3.1-30

Change-Id: Ic28bfd077657a44d5889f30c0842da888b9b7ce7

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,8 +21,8 @@ SUBDIRS = \
         config
 
 PACKAGES=\
-    $(LIGHTWAVE_STAGE_DIR)/x86_64/$(LIGHTWAVE_RPM) \
-    $(LIGHTWAVE_STAGE_DIR)/x86_64/$(LIGHTWAVE_CLIENT_RPM)
+    $(LIGHTWAVE_STAGE_DIR)/$(ARCH)/$(LIGHTWAVE_RPM) \
+    $(LIGHTWAVE_STAGE_DIR)/$(ARCH)/$(LIGHTWAVE_CLIENT_RPM)
 
 RPMBUILD=/usr/bin/rpmbuild
 
@@ -51,6 +51,7 @@ stage:
 
 package: stage $(RPMBUILD_SPECS)/$(PKG_SPEC) | $(RPMBUILD_DIRS)
 	cd $(RPMBUILD_ROOT) && \
+	$(RM) -f $(RPMBUILD_RPMS)/$(ARCH)/*.rpm && \
 	$(RPMBUILD) \
               -v \
               --bb \
