--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -1,6 +1,5 @@
 bin_SCRIPTS = \
     @top_builddir@/config/scripts/configure-lightwave-server \
-    @top_builddir@/config/scripts/configure-identity-server \
     @top_builddir@/config/scripts/configure-sts \
     @top_srcdir@/config/scripts/domainjoin.sh \
     @top_srcdir@/config/scripts/run_backup.sh \
@@ -17,8 +16,5 @@ scriptsconf_SCRIPTS = \
  lw-firewall-client.json \
  lightwave-syslog-logrotate.conf
 
-systemd_SCRIPTS = firewall.service
+systemd_DATA = firewall.service
 
-firewall.service:
-	$(MKDIR) -p $(PUBLISH_DIR)/lib/systemd/system/
-	$(CP) -prf $(builddir)/scripts/firewall.service $(PUBLISH_DIR)/lib/systemd/system/
