--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -2,7 +2,7 @@
 
 LW_BIN_DIR=/opt/likewise/bin
 LW_SBIN_DIR=/opt/likewise/sbin
-LW_DEFAULT_VERSION="1.3.0"
+LW_DEFAULT_VERSION="1.3.1"
 LW_KEY="[HKEY_THIS_MACHINE\\Services\\lw-server]"
 
 _get_lw_version(){
@@ -362,7 +362,6 @@ DOMAIN_STATE=`/opt/likewise/bin/lwregshell list_values "$VMAFD_PARAM_KEY" | \
 if [ ! -z "$DOMAIN_STATE" ]; then
     # Get the hex value and convert it to integer
     DOMAIN_STATE=$((`echo $DOMAIN_STATE | cut -d ' ' -f3`))
-
 fi
 
 #check current version
@@ -381,7 +380,8 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ -f /.dockerenv ]]; then
         VMDIR_ARG=`$LW_BIN_DIR/lwregshell list_values $VMDIR_KEY | \
                 grep 'Arguments' | sed 's/+//' | cut -d '"' -f4`
 
-        $LW_BIN_DIR/lwregshell set_value $VMDIR_KEY Arguments "$VMDIR_ARG -m standalone"
+        $LW_BIN_DIR/lwregshell set_value \
+                               $VMDIR_KEY Arguments "$VMDIR_ARG -m standalone"
         $LW_BIN_DIR/lwsm refresh
 
         # perform vmdir upgrade
@@ -398,7 +398,9 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ -f /.dockerenv ]]; then
         $LW_BIN_DIR/lwsm refresh
         # take vmdir out of maintenance mode using no-restart method
         $LW_BIN_DIR/lwsm start vmafd
-        $BIN_DIR/dir-cli state set --state NORMAL --login $LOTUS_ADMIN_DEFAULT --password "$LOTUS_ADMIN_PASSWORD_DEFAULT"
+        $BIN_DIR/dir-cli state set --state NORMAL \
+                                   --login $LOTUS_ADMIN_DEFAULT \
+                                   --password "$LOTUS_ADMIN_PASSWORD_DEFAULT"
 
         # Update installed version on upgrade success
         _set_installed_version
@@ -451,23 +453,27 @@ else
         _exit 1
     fi
 
-case $DISABLE_STS in
-    0)
-        echo "Secure Token Service Installation - Started"
-	$BIN_DIR/configure-sts --domain $LOTUS_DOMAIN_DEFAULT  --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" --username $LOTUS_ADMIN_DEFAULT
-        if [ $? -ne 0 ]; then
-            echo "Secure Token Service Installation - Failed"
-            _exit 1
-        fi
-        ;;
-    *)
-        ;;
-esac
+    case $DISABLE_STS in
+        0)
+            echo "Secure Token Service Installation - Started"
+	        $BIN_DIR/configure-sts \
+                --domain $LOTUS_DOMAIN_DEFAULT \
+                --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
+                --username $LOTUS_ADMIN_DEFAULT
+            if [ $? -ne 0 ]; then
+                echo "Secure Token Service Installation - Failed"
+                _exit 1
+            fi
+            ;;
+        *)
+            ;;
+    esac
 
+    # Set installed version on installation success.
 
-  # Set installed version on installation success.
     _set_installed_version
 
     echo "Setup complete."
     _exit 0
 fi
+
