PR 2135300: mv DC act creation to server side
Bug Number: 2135300

1. move dc act creation to server side.
2. move VmDirInternalEntryAttributeReplace to common/util.c

Change-Id: I5ef9314afa9d0615f1111ad1d5595872d34a882e

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -21,6 +21,7 @@ vmdird_SOURCES = \
     main.c \
     metrics.c \
     parseargs.c \
+    promote/dcactmgmt.c \
     regconfig.c \
     rpcserv.c \
     rpcsrpserv.c \
