--- a/vmidentity/service/src/main/webapp/WEB-INF/web.xml
+++ b/vmidentity/service/src/main/webapp/WEB-INF/web.xml
@@ -53,13 +53,31 @@
     <filter>
         <filter-name>SecurityRequestFilter</filter-name>
         <filter-class>com.vmware.identity.SecurityRequestWrapperFilter</filter-class>
-   </filter>
-
+    </filter>
     <filter-mapping>
         <filter-name>SecurityRequestFilter</filter-name>
         <servlet-name>appServlet</servlet-name>
     </filter-mapping>
-
+    <filter>
+        <filter-name>HttpHeaderSecurity</filter-name>
+        <filter-class>org.apache.catalina.filters.HttpHeaderSecurityFilter</filter-class>
+        <init-param>
+            <param-name>hstsEnabled</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>hstsIncludeSubDomains</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>hstsMaxAgeSeconds</param-name>
+            <param-value>31536000</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>HttpHeaderSecurity</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
