PR 2144820: fix priox atomic domain join issues
Bug Number: 2144820

fix a few bugs in prior atomic join code.
1. move atomic join code from client.c to atomicjoinclient.c
2. accnt_mgmt.c
   Use VmDirAllocateConnection
   Fix schema context leak
3. rpcserv.c
   Fix naming convention
4. rpcstring.c
   fix naming convention
   fix VmDirRpcAllocateStringAFromW string len calculation for correctness

Change-Id: Id91c18c07edd75dbe74ba4372eea1c502955504d

--- a/vmdir/client/Makefile.am
+++ b/vmdir/client/Makefile.am
@@ -10,6 +10,7 @@ libvmdirclient_la_CPPFLAGS = \
     @LW_INCLUDES@
 
 libvmdirclient_la_SOURCES = \
+    atomicjoinclient.c \
     binding.c \
     client.c \
     dbbackupclient.c \
