Parse and Store VMCA Policy
This change is step 1 in adding policy enforcement to VMCA.  With this
change, VMCA will now read an optional config JSON file which defines
a policy to enforce while executing APIs.  Upon initialization, VMCA
will parse the JSON config file and load the policies defined in it--at
this time, VMCA only supports 1 policy type (described later).

In vmca/service/policy.c, we define an entry point where the server will
start the policy loading process.  Based upon the parsed policy from the
config file, it will call a function pointer to the appropriate policy's
parse function.  VMCA maintains a map of available policies and their
functions in a global table.

Currently, we only support one policy--SNValidate.  SNValidate has two
stages--match and validate.  The match stage will be used to find some
data from the incoming request to match against during the validate
stage.  The validate stage will be used to use various pieces of data
from the request to validate against what is to be matched.  Both the
match and validate stages can have many items to be matched against or
validated with.

Example config file:

    ```
    {
            "SNValidate": {
                    "match": [
                            {
                                    "data": "req.upn.dn",
                                    "with": "none"
                            }
                    ],
                    "validate": [
                            {
                                    "data": "req.csr.subj.o",
                                    "with": "req.upn.dn.rdn"
                            }
                    ]
            }
    }
    ```
  In this config file, VMCA will grab the requests UPN and get the DN of
  the account.  Next, it will grab the organization element from a CSR
  subject field and validate that the organization element's value is
  one of the RDNs of the UPN DN.

This is just one of many examples.  More information will be provid

--- a/vmca/service/Makefile.am
+++ b/vmca/service/Makefile.am
@@ -3,6 +3,7 @@ sbin_PROGRAMS = vmcad
 idl_srcdir=$(top_srcdir)/vmca/idl
 
 vmcad_SOURCES = \
+    policy.c \
     auth.c \
     dirsync.c \
     entrypoints.c \
@@ -15,6 +16,7 @@ vmcad_SOURCES = \
     rpcserv.c \
     service.c \
     signal.c \
+    snpolicy.c \
     state.c \
     thread.c \
     utils.c \
