rest api json re-org certs and password api and impl complete certs and passrefresh implementation fix valgrind reported leaks
Change-Id: I4af1d7b12784778d323b68e73afd63d7255c32ff

--- a/configure.ac
+++ b/configure.ac
@@ -1598,6 +1598,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/server/schema/Makefile
                  vmdir/server/acl/Makefile
                  vmdir/server/ldap-head/Makefile
+                 vmdir/server/api/Makefile
                  vmdir/server/rest-head/Makefile
                  vmdir/server/replication/Makefile
                  vmdir/server/clusterstate/Makefile
