PR 2135300: add pre-copied db join flow and a few code consolidation
1. add pre-copied join flow.
2. clean up firstreplcycle.c
2.1  move db copy logic to dbcopy.c (straight code relocate)
2.2  move db swap and establish replication state logic to dbswap.c
3. a few other misc clean up and/or code relocation

TEST: valgrind
Clutner A and B
1. take A backup
2. join C to A using A backup
3. join C to B using B backup
4. join C to A using RPC hot db copy

Change-Id: I4886718aa629602761feae20a4dd488ab79f6dff

--- a/configure.ac
+++ b/configure.ac
@@ -1055,6 +1055,17 @@ AC_DEFINE_UNQUOTED(VMDIR_DB_DIR, "$VMDIR_DB_DIR", [Database directory])
 
 #--------------------------------------------------------------------
 
+if test x"$localstatedir" = x"/var"; then
+    lwtmpdir="$localstatedir/lib/vmware/lightwave_tmp"
+else
+    lwtmpdir="$localstatedir/lightwave_tmp"
+fi
+AC_SUBST(lwtmpdir)
+AS_AC_EXPAND(LIGHTWAVE_TMP_DIR, ["${lwtmpdir}"])
+AC_DEFINE_UNQUOTED(LIGHTWAVE_TMP_DIR, "$LIGHTWAVE_TMP_DIR", [Temporary directory])
+
+#--------------------------------------------------------------------
+
 AS_AC_EXPAND(VMDIR_SBIN, ["${sbindir}"])
 VMDIR_SBIN_DIR=$VMDIR_SBIN
 AC_SUBST(VMDIR_SBIN_DIR)
