--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -3,6 +3,8 @@ noinst_LTLIBRARIES = libreplication.la
 
 libreplication_la_SOURCES = \
     deadlockdetectionvector.c \
+    dbcopy.c \
+    dbswap.c \
     drrestore.c \
     firstreplcycle.c \
     globals.c \
