Default build target should build only lightwave and not ui
Fix cleanup script

Change-Id: Id32871fbe4fdb98915ae832deffcdbaaa06dd056

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,8 @@ STAGEDIR = $(BUILDROOT)/stage
 MAKEROOT=$(SRCROOT)/support/make
 include $(MAKEROOT)/makedefs.mk
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = \
         vmmetrics \
         vmevent \
