Single value Metadata Processing
Jira Id: CNA-931

Changes:
    - Modified metaData array to VMDIR_ATTRIBUTE_METADATA
    - Made changes to the existing code to be compatible with new
      metadata structure
    - Restructured consumer side metadata processing logic

Testing:
    - In a three node ring topology, created 10000 tenant with a sleep 1 seconds.
      verification: clean integrity check report
    - In a three node ring topology, created and deleted 10000 tenant
      with a sleep of 1 seconds in between them
      verification: clean integrity check report
    - In a three node ring topology, stopped vmdir in other two nodes
      created and deleted 1000 tenants. To ensure tombstone add logic is
      exercised.
      verification: clean integrity check report
    - Manually induced a conflict and verified conflict resolution in
      replication works.
    - Verified attribute delete in Repl Add works.
    - Verified attribute delete in Repl Modify works.

Unit Tests:
    - Added cmocka unit tests for server/common/metadata.c file
    - TODO add cmocka unit tests for
      server/replication/conflictresolution.c and
      server/replication/metadata.c

Change-Id: Ie492583a948916835b1f1c1a5ebf764a04291d20

--- a/configure.ac
+++ b/configure.ac
@@ -913,6 +913,12 @@ AC_CHECK_LIB([curl],
     [],
     [$CURL_LDFLAGS])
 
+AC_CHECK_LIB([cmocka],
+    [_cmocka_run_group_tests],
+    [CMOCKA_LIBS="-lcmocka"],
+    [],
+    [$CMOCKA_LDFLAGS])
+
 AC_CHECK_LIB([copenapi],
     [coapi_load_from_file],
     [COPENAPI_LIBS="-lcopenapi"]
@@ -1033,6 +1039,7 @@ AC_SUBST(DOMAINJOIN_LIBS)
 AC_SUBST(LWSM_LIBS)
 AC_SUBST(CARES_LIBS)
 AC_SUBST(CURL_LIBS)
+AC_SUBST(CMOCKA_LIBS)
 
 #--------------------------------------------------------------------
 
@@ -1410,6 +1417,26 @@ AC_SUBST(CURL_INCLUDES)
 AC_SUBST(CURL_LDFLAGS)
 
 #--------------------------------------------------------------------
+# CMOCKA components
+
+AC_ARG_WITH([cmocka],
+    [AC_HELP_STRING([--with-cmocka=<dir>], [use CMOCKA binaries rooted at prefix <dir> ])],
+    [
+        CMOCKA_BASE_PATH="$withval"
+    ],
+    [
+        CMOCKA_BASE_PATH="/usr"
+    ])
+
+CMOCKA_INCLUDES="-I$CMOCKA_BASE_PATH/include"
+CMOCKA_LDFLAGS="-L$CMOCKA_BASE_PATH/lib"
+
+
+AC_SUBST(CMOCKA_BASE_PATH)
+AC_SUBST(CMOCKA_INCLUDES)
+AC_SUBST(CMOCKA_LDFLAGS)
+
+#--------------------------------------------------------------------
 # Commons Daemon component
 
 AC_ARG_WITH([commons-daemon],
@@ -1658,6 +1685,9 @@ AC_CONFIG_FILES([Makefile
                  vmdir/gssapi-plugins/ntlm/Makefile
                  vmdir/gssapi-plugins/srp/Makefile
                  vmdir/gssapi-plugins/unix/Makefile
+                 vmdir/unit-tests/Makefile
+                 vmdir/unit-tests/server/Makefile
+                 vmdir/unit-tests/server/common/Makefile
                  vmdns/Makefile
                  vmdns/include/Makefile
                  vmdns/include/public/Makefile
