rename vmmetrics to vmcommon  - address review comments  - initial change to find a home for common code  - tested with hmake test  -   install client, server  -   test for service up
Change-Id: I05f51482cae87974c1e003b65505499152442c1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ include $(MAKEROOT)/makedefs.mk
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
-        vmmetrics \
+        vmcommon \
         vmevent \
         vmidentity/ssoclients \
         lwraft \
