Add security manager to sts
Adds a security manager to stsd to prevent unwanted use of classes at
runtime. The policy file specifies unwanted permissions which are
specifically denied and a whitelist of permissions needed to run sts.

On install or upgrade, it will manually extract jnidispatch lib for use.
The sts.policy file contains the enforced policy set.

Testing:
- Tested fresh install & upgrade case, then ran integration tests

Change-Id: Idebb1b7d75089c31fe66037ac4572d9f10012c9e

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -71,7 +71,8 @@ vmstsconf_DATA = \
     @top_builddir@/vmidentity/config/catalina.policy \
     @top_builddir@/vmidentity/config/context.xml \
     @top_builddir@/vmidentity/config/tomcat-users.xml \
-    @top_builddir@/vmidentity/config/vmsts-telegraf.conf
+    @top_builddir@/vmidentity/config/vmsts-telegraf.conf \
+    @top_builddir@/vmidentity/config/sts.policy
 
 vmidmconf_DATA= \
     @top_srcdir@/vmidentity/sso-config/src/main/resources/ssoconfig.log4j2.xml \
@@ -81,7 +82,8 @@ vmidmconf_DATA= \
 
 vmstsbin_DATA = \
     @top_builddir@/vmidentity/config/setenv.sh \
-    @top_builddir@/vmidentity/vmware-sts/packages/vmware-identity-tomcat-extensions.jar
+    @top_builddir@/vmidentity/vmware-sts/packages/vmware-identity-tomcat-extensions.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/pro-grade-1.1.1.jar
 
 vmstssampleconf_DATA = \
     @top_builddir@/vmidentity/config/server.xml \
