--- a/vmidentity/tomcat-extensions/pom.xml
+++ b/vmidentity/tomcat-extensions/pom.xml
@@ -86,6 +86,12 @@
       <artifactId>log4j</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+    <!-- Security Manager -->
+    <dependency>
+      <groupId>net.sourceforge.pro-grade</groupId>
+      <artifactId>pro-grade</artifactId>
+      <version>${pro-grade.version}</version>
+    </dependency>
   </dependencies>
 
   <properties>
