add httpclient to vmcommon add jsonresult to vmcommon  - initially for use from afd rest client add tests for httpclient and jsonresult fix review comments
Change-Id: Icea1942608b3c583c6ac9c4bb164e644b2ffe429

--- a/vmcommon/testing/Makefile.am
+++ b/vmcommon/testing/Makefile.am
@@ -5,6 +5,8 @@ vmcommon_test_SOURCES = \
     gaugetest.c \
     histogramtest.c \
     mixedtest.c \
+    vmhttpclienttest.c \
+    vmjsonresulttest.c \
     main.c
 
 vmcommon_test_CPPFLAGS = \
