--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -9,15 +9,24 @@ lib_LTLIBRARIES = libvmcommon.la
 libvmcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmcommon/include \
     -I$(top_srcdir)/vmcommon/include/public \
+    @CURL_INCLUDES@ \
+    @JANSSON_INCLUDES@ \
     @LW_INCLUDES@
 
 libvmcommon_la_SOURCES = \
     memory.c \
+    vmstring.c \
+    vmhttpclient.c \
+    vmjsonresult.c \
     vmmetrics.c
 
 libvmcommon_la_LIBADD = \
+    @CURL_LIBS@ \
+    @JANSSON_LIBS@ \
     @LWBASE_LIBS@ \
     @PTHREAD_LIBS@
 
 libvmcommon_la_LDFLAGS = \
+    @CURL_LDFLAGS@ \
+    @JANSSON_LDFLAGS@ \
     @LW_LDFLAGS@
