Implement user defined transaction as RFC 5805
This PR (2160781) implements user transaction as defined by experimental RFC 5805.
Refer CNA-708 and CNA-709 for more information. This check-in is on LDAP part only
(i.e. no Rest part on the user transaction yet). Test cases:
a. Regresss all LDAP operations.
b. Use the modified Openldap ldapmodify to perform LDAP transaction with different
   test scenarios as defiend in the functional spec.
c. Random test for extended peroid (over two days) with mixed regular and user transactions.
   Use kill -9 on post servers peroidically, and compare the entries in all post servers.
d. Run valgrind memory leak

Change-Id: I5ecacdceaf5ecfa4f21fdd3518af1dbe0621e34b

--- a/lwraft/server/ldap-head/Makefile.am
+++ b/lwraft/server/ldap-head/Makefile.am
@@ -26,7 +26,8 @@ libldap_head_la_SOURCES = \
     result.c        \
     search.c        \
     vecs.c          \
-    unbind.c
+    unbind.c        \
+    extended.c
 
 libldap_head_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
